--- a/index.html
+++ b/index.html
@@ -41,16 +41,14 @@
 
                     <p class="m2-txt1 p-b-46">
 
-                        Follow me for the next update.  (҂◡_◡)
+                        My LinkedIn <a href="Navigating_HTML_DOM_in_AutoPilot_Mode.pdf">update</a>.  (҂◡_◡)
                     </p>
 
 					<form class="contact100-form validate-form m-t-10 m-b-10">
-						<div class="wrap-input100 validate-input m-lr-auto-lg" data-validate = "Email is required: ex@abc.xyz">
-							<input class="s2-txt1 placeholder0 input100 trans-04" type="text" name="email" placeholder="Email Address">
+						<div class="wrap-input100 validate-input m-lr-auto-lg" >
+							<label class="s2-txt1 placeholder0 input100 trans-04">Yaaba Daaba Dooo!</label>
 
-							<button class="flex-c-m ab-t-r size2 hov1">
-								<i class="zmdi zmdi-long-arrow-right fs-30 cl1 trans-04"></i>
-							</button>
+							
 						</div>		
 					</form>
 				</div>
