--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ var mouse;
 var copy = [
 "Terminator Vision",
 "Node V8",
-"GPU heat",
+"Never Mind!",
 "Computer Vision",
 "HTML",
 "DOM",
@@ -49,7 +49,7 @@ var copy = [
 "Clustering",
 "Unsupervised Learning",
 "Supervised Learning",
-"K-means",
+"Who Cares!",
 "Puppeteer",
 "Automation",
 "Bot",
